--- a/css/style.css
+++ b/css/style.css
@@ -10033,6 +10033,190 @@ input {
 
 /* Our Process */
 
+.main-timeline {
+	position: relative;
+}
+
+.main-timeline:before {
+	content: "";
+	display: block;
+	width: 2px;
+	height: 100%;
+	background: #c6c6c6;
+	margin: 0 auto;
+	position: absolute;
+	top: 0;
+	left: 0;
+	right: 0;
+}
+
+.main-timeline .process-timeline {
+	margin-bottom: 40px;
+	position: relative;
+}
+
+.main-timeline .process-timeline:after {
+	content: "";
+	display: block;
+	clear: both;
+}
+
+.main-timeline .icon {
+	width: 18px;
+	height: 18px;
+	line-height: 18px;
+	margin: auto;
+	position: absolute;
+	top: 0;
+	left: 0;
+	bottom: 0;
+	right: 0;
+}
+
+.main-timeline .icon:before,
+.main-timeline .icon:after {
+	content: "";
+	width: 100%;
+	height: 100%;
+	border-radius: 50%;
+	position: absolute;
+	top: 0;
+	left: 0;
+	transition: all 0.33s ease-out 0s;
+}
+
+.main-timeline .icon:before {
+	background: #fff;
+	border: 2px solid #232323;
+	left: -3px;
+}
+
+.main-timeline .icon:after {
+	border: 2px solid #c6c6c6;
+	left: 3px;
+}
+
+.main-timeline .process-timeline:hover .icon:before {
+	left: 3px;
+}
+
+.main-timeline .process-timeline:hover .icon:after {
+	left: -3px;
+}
+
+.main-timeline .date-content {
+	width: 50%;
+	float: left;
+	margin-top: 22px;
+	position: relative;
+}
+
+.main-timeline .date-content:before {
+	content: "";
+	width: 36.5%;
+	height: 2px;
+	background: #c6c6c6;
+	margin: auto 0;
+	position: absolute;
+	top: 0;
+	right: 10px;
+	bottom: 0;
+}
+
+.main-timeline .date-outer {
+	width: 125px;
+	height: 125px;
+	font-size: 16px;
+	text-align: center;
+	margin: auto;
+	z-index: 1;
+}
+
+.main-timeline .date-outer:before,
+.main-timeline .date-outer:after {
+	content: "";
+	width: 125px;
+	height: 125px;
+	margin: 0 auto;
+	border-radius: 50%;
+	position: absolute;
+	top: 0;
+	left: 0;
+	right: 0;
+	transition: all 0.33s ease-out 0s;
+}
+
+.main-timeline .date-outer:before {
+	background: #fff;
+	border: 2px solid #232323;
+	left: -6px;
+}
+
+.main-timeline .date-outer:after {
+	border: 2px solid #c6c6c6;
+	left: 6px;
+}
+
+.main-timeline .process-timeline:hover .date-outer:before {
+	left: 6px;
+}
+
+.main-timeline .process-timeline:hover .date-outer:after {
+	left: -6px;
+}
+
+.main-timeline .date {
+	width: 100%;
+	margin: auto;
+	position: absolute;
+	top: 43%;
+	left: 0;
+}
+
+.main-timeline .month {
+	font-size: 18px;
+	font-weight: 700;
+}
+
+.main-timeline .year {
+	display: block;
+	font-size: 30px;
+	font-weight: 700;
+	color: #232323;
+	line-height: 36px;
+}
+
+.main-timeline .timeline-content {
+	width: 50%;
+	padding: 20px 0 20px 50px;
+	float: right;
+}
+
+.main-timeline .title {
+	font-size: 19px;
+	font-weight: 700;
+	line-height: 24px;
+	margin: 0 0 15px 0;
+	color: #5495bf;
+}
+
+.main-timeline .description {
+	margin-bottom: 0;
+}
+
+.main-timeline .process-timeline:nth-child(2n) .date-content {
+	float: right;
+}
+
+.main-timeline .process-timeline:nth-child(2n) .date-content:before {
+	left: 10px;
+}
+
+.main-timeline .process-timeline:nth-child(2n) .timeline-content {
+	padding: 20px 50px 20px 0;
+	text-align: right;
+}
+
 .our-process {
 	background: #1E4156;
 }
@@ -11008,13 +11192,17 @@ ul.list li {
 }
 
 .vero-banner-heading {
-	color: #ff8000;
+	color: #fa7e01;
 }
 
 .vero-resarch {
 	background-image: url(../images/case-study/vero/vero-back-research.png);
 	background-size: cover;
 	background-position: center;
+}
+
+h2.vero-about-heading {
+	color: #fa7e01;
 }
 
 /* Toys Sort Case Study */
@@ -11043,6 +11231,19 @@ ul.list li {
 
 .home-store-app {
 	background-image: url(../images/case-study/home-store-app/home-store-app-background.png);
+}
+
+.home-store-banner-heading1 {
+	color: #e40613;
+	text-transform: uppercase;
+}
+
+.home-store-about-heading1 {
+	color: #e40613;
+}
+
+.home-store-about-heading3 {
+	color: #e40613;
 }
 
 /* ERP Case Study */
@@ -11114,6 +11315,10 @@ ul.list li {
 	background-image: url(../images/case-study/erp/erp-portal-background.png);
 	background-size: cover;
 	background-position: center;
+}
+
+.erp-db-icons-text {
+	padding-left: 20px;
 }
 
 /* Home Store Web Case Study */
