--- a/css/style.css
+++ b/css/style.css
@@ -194,7 +194,7 @@ span.circle2 {
 .text-bold {
 	font-weight: bold;
 }
-/**Header section**/
+/** Header section **/
 .header-icon-nav a {
 	background: #ffffff7a;
 	padding: 12px;
@@ -418,7 +418,7 @@ header .dropdown-menu {
 .popup-modalfull .modal-body {
 	overflow-y: auto;
 }
-/**mega menu header **/
+/** mega menu header  **/
 .main-header.sticky .nx-dropdown {
 	top: 65px;
 }
@@ -807,7 +807,7 @@ div.custom-nav > ul > li.sbmenu:hover > a:after {
 	-moz-transition: all 1s ease;
 	-webkit-transition: all 1s ease;
 }
-/**circle button effect**/
+/** circle button effect **/
 a.play-video {
 	min-width: 60px;
 	min-height: 60px;
@@ -852,7 +852,7 @@ a.play-video::after {
 	text-align: center;
 	margin: 0 auto 0;
 }
-/****/
+/**  **/
 .hero-card-web {
 	position: relative;
 	overflow: hidden;
@@ -1039,7 +1039,7 @@ a.play-video::after {
 	width: 100%;
 	opacity: 0.03;
 }
-/**Hero section**/
+/** Hero section **/
 .hero-bg-bg1:before {
 	content: "";
 	background: url(../images/hero/banner-shap-2.png);
@@ -1099,7 +1099,7 @@ a.play-video::after {
 	line-height: 30px;
 	margin-bottom: 35px;
 }
-/**About section**/
+/** About section **/
 .about-agency .common-heading h2 {
 	margin-bottom: 20px;
 }
@@ -1164,7 +1164,7 @@ a.play-video::after {
 }
 
 .user-image.bdr-radius {
-    width: 20%;
+    /* width: 20%; */
     float: left;
 }
 
@@ -1172,7 +1172,7 @@ a.play-video::after {
 	font-weight: 700;
 }
 
-/**Service section**/
+/** Service section **/
 .service-section {
 	background: #fff;
 	position: relative;
@@ -1316,7 +1316,7 @@ a.play-video::after {
 	position: relative;
 	z-index: 5;
 }
-/**Service index2**/
+/** Service index2 **/
 .service-2:before {
 	background-color: #f9f9f9;
 }
@@ -1385,7 +1385,7 @@ a.play-video::after {
 .wide-block h4 {
 	margin: 20px 0 30px 0;
 }
-/**Statistics section**/
+/** Statistics section **/
 .tilt3d .statistics-img {
 	transform-style: preserve-3d;
 	transform: perspective(1000px);
@@ -1471,7 +1471,7 @@ a.play-video::after {
 	-webkit-box-shadow: -30px 30px 60px #f2f2f2,30px -30px 60px #ffffff;
 	box-shadow: -30px 30px 60px #f2f2f2,30px -30px 60px #ffffff;
 }
-/**Portfolio section**/
+/** Portfolio section **/
 .portfolio-section {
 	background: #fff;
 	position: relative;
@@ -1560,7 +1560,7 @@ a.play-video::after {
 	padding: 25px;
 	border-radius: 8px;
 }
-/**Clients section**/
+/** Clients section **/
 .clients-logo {
 	background: #ffffff;
 	padding: 0px 15px;
@@ -1598,7 +1598,7 @@ a.play-video::after {
 	float: left;
 	position: relative;
 }
-/**Work category section**/
+/** Work category section **/
 .work-category {
 	background: #fbf9ed;
 	background: -moz-linear-gradient(top, #fbf9ed 0%, #fbeaf8 100%);
@@ -1693,7 +1693,7 @@ a.play-video::after {
 .cd12 {
 	background: #7affdb;
 }
-/**Testimonial section**/
+/** Testimonial section **/
 .testinomial-section {
 	background: url(../images/shape/shape-9.svg) #fff;
 	background-size: contain;
@@ -1780,7 +1780,7 @@ a.play-video::after {
 .owl-carousel .owl-dots .owl-dot.active:after, .owl-carousel .owl-dots .owl-dot:focus:after, .owl-carousel .owl-dots .owl-dot:hover:after {
 	opacity: 1;
 }
-/**Enquire form section**/
+/** Enquire form section **/
 .light-bgs {
 	background: rgba(255, 255, 255, 0.52);
 	padding: 30px;
@@ -2021,7 +2021,7 @@ a.play-video::after {
 .form-block button {
 	width: 100%;
 }
-/**Our office section**/
+/** Our office section **/
 .our-office {
 	background: #fff;
 	position: relative;
@@ -2116,7 +2116,7 @@ a.play-video::after {
 .-address-list li {
 	line-height: 35px;
 }
-/**scroll to top**/
+/** scroll to top **/
 #scrollUp:hover {
 	opacity: 1;
 }
@@ -2136,7 +2136,7 @@ a.play-video::after {
 	background-position: center center;
 	background-repeat: no-repeat;
 }
-/**Footer section**/
+/** Footer section **/
 footer {
 	position: relative;
 }
@@ -2383,7 +2383,7 @@ footer.ftshap:before {
 .link-hover a:hover {
 	color: #ff1f8e !important;
 }
-/**breadcrumb**/
+/** breadcrumb **/
 .breadcrumb-area {
 	padding: 150px 0px 90px 0px;
 	position: relative;
@@ -2482,7 +2482,7 @@ footer.ftshap:before {
 	position: relative;
 	top: -3px;
 }
-/***About page***/
+/** *About page* **/
 .text-block {
 	position: relative;
 	z-index: 55;
@@ -2517,7 +2517,7 @@ footer.ftshap:before {
 }
 
 
-/**Team page**/
+/** Team page **/
 
 .banner-4 {
 	background: url(../images/banner/2.jpg);
@@ -2615,7 +2615,7 @@ footer.ftshap:before {
 	bottom: -55px;
 	z-index: 0;
 }
-/**Portfolio page**/
+/** Portfolio page **/
 .banner-3 {
 	background: url(../images/banner/5.jpg);
 	background-repeat: no-repeat;
@@ -2709,7 +2709,7 @@ footer.ftshap:before {
 .pv-:hover .item-image img {
 	transform: scale(1.0);
 }
-/***Service page***/
+/** *Service page* **/
 .h-scroll {
 	width: 100%;
 	padding: 50px 10px;
@@ -2841,7 +2841,7 @@ footer.ftshap:before {
 	top: -150px;
 	right: 20%;
 }
-/**Service details page**/
+/** Service details page **/
 .common-heading.ptag h2 {
 	margin-bottom: 15px;
 }
@@ -2968,7 +2968,7 @@ footer.ftshap:before {
 	margin: 0 0 0 20px;
 	width: calc(100% - 150px);
 }
-/**Pricing page**/
+/** Pricing page **/
 .pricing-table {
 	position: relative;
 	text-align: center;
@@ -3048,7 +3048,7 @@ footer.ftshap:before {
 	padding: 10px;
 	border: 8px solid #e9f8ff;
 }
-/**Case study page**/
+/** Case study page **/
 .banner-5 {
 	background: url(../images/banner/7.jpg);
 	background-repeat: no-repeat;
@@ -3127,7 +3127,7 @@ footer.ftshap:before {
 .screen-splits {
 	padding: 0 10px;
 }
-/**Blog page**/
+/** Blog page **/
 .vrbloglist + .vrbloglist {
 	margin-top: 60px;
 }
@@ -3416,7 +3416,7 @@ footer.ftshap:before {
 	color: #050748;
 }
 
-/** Contact Page **/
+/**  Contact Page  **/
 
 /* .banner-6 {
 	background: url(../images/banner/4.jpg);
@@ -3472,7 +3472,7 @@ footer.ftshap:before {
 .bglight {
 	background: #fbfbfb;
 }
-/**list**/
+/** list **/
 .list-ul li {
 	padding: 0 0px 12px 29px;
 	position: relative;
@@ -3510,7 +3510,7 @@ footer.ftshap:before {
 .ul-liin {
 	padding: 0 0 0 20px;
 }
-/**404 page**/
+/** 404 page **/
 .error {
 	height: 100vh;
 }
@@ -3548,7 +3548,7 @@ footer.ftshap:before {
 }
 
 
-/**Client reviews**/
+/** Client reviews **/
 .reviews-block {
 	background: #fafaff;
 }
@@ -3642,7 +3642,7 @@ footer.ftshap:before {
 .star-rate li a {
 	color: #000000;
 }
-/**Freelance Homepage**/
+/** Freelance Homepage **/
 .fl-hero {
 	background: url(../images/shape/hero-shape.svg),#ffd6d6;
 	background-position: center center, center center;
@@ -3745,7 +3745,7 @@ footer.ftshap:before {
 .header-heading span {
 	color: #46a2b9;
 }
-/**Lead Generation Homepage**/
+/** Lead Generation Homepage **/
 .lead-hero {
 	background: url(../images/hero/bg-gradient.jpg);
 	background-position: center center;
@@ -3800,7 +3800,7 @@ footer.ftshap:before {
 	text-align: left;
 }
 
-/** Digital Agency Homepage **/
+/**  Digital Agency Homepage  **/
 
 .srvc-bg-nx {
 	background: #fff;
@@ -4140,7 +4140,7 @@ footer.ftshap:before {
 .bg-none {
 	background: none;
 }
-/**Digital Agency home 2**/
+/** Digital Agency home 2 **/
 .img-with-shape {
 	position: relative;
 	text-align: center;
@@ -4567,7 +4567,7 @@ p.video-lab-- {
 	justify-content: center;
 	display: flex;
 }
-/**creative Agency home 1**/
+/** creative Agency home 1 **/
 .hero-creative-agenc1 {
 	background-size: cover;
 	background-position: center center;
@@ -4597,7 +4597,7 @@ p.video-lab-- {
 .sec-dark p {
 	color: #bdbfca;
 }
-/**creative-agenc 2**/
+/** creative-agenc 2 **/
 .hero-creative-agenc2 .container {
 	max-width: 1320px;
 }
@@ -4814,7 +4814,7 @@ p.video-lab-- {
 	grid-template-columns: 1fr 1fr 1fr;
 	grid-gap: 5px;
 }
-/**minimal-portfolio**/
+/** minimal-portfolio **/
 .minimal-portfolio {
 	background-repeat: no-repeat;
 	background-position: center center;
@@ -4861,7 +4861,7 @@ h3 a {
 .img-hro img {
 	border-radius: 8px;
 }
-/**mobile-app-**/
+/** mobile-app- **/
 .mobile-app- {
 	/* background-image: -moz-linear-gradient(45deg,#9217de 0%,#4775ff 50%,#00b6d4 100%);
 	background-image: -webkit-linear-gradient(45deg,#9217de 0%,#4775ff 50%,#00b6d4 100%);
@@ -5143,7 +5143,7 @@ h3 a {
 	-webkit-text-stroke: 1px #e8e8e8;
 	-webkit-text-fill-color: white;
 }
-/**business-startup**/
+/** business-startup **/
 .business-startup {
 	background: url(../images/hero/wave-hero.svg);
 	background-repeat: no-repeat;
@@ -5223,7 +5223,7 @@ h3 a {
 
 
 
-/**start update 1.7 from here**/
+/** start update 1.7 from here **/
 /*shop page*/
 
 @media (min-width: 1200px) {
@@ -5671,9 +5671,9 @@ table.border {
 	font-size: 14px;
 	font-weight: bold;
 }
-/**end update 1.7 from here**/
+/** end update 1.7 from here **/
 
-/**Features**/
+/** Features **/
 .custom-file-input:focus~.custom-file-label {
 	border-color: #ced4da;
 	box-shadow: none;
@@ -5780,7 +5780,7 @@ table.border {
 .icon-card- h4 {
 	margin: 20px 0;
 }
-/**Help css**/
+/** Help css **/
 .onloadpage {
 	position: fixed;
 	z-index: 99999999;
@@ -6416,7 +6416,7 @@ html .pb140 {
 	-webkit-animation: 3s infinite updonanim;
 }
 
-/** Gredient CSS **/
+/**  Gredient CSS  **/
 .bg-gradient {
 	background: #c7ecff;
 	background: -moz-linear-gradient(top, #c7ecff 0%, #f9efff 100%);
@@ -6558,7 +6558,7 @@ html .pb140 {
 .classic-bg5 {
 	background: #fffef4;
 }
-/**Mobile Nav**/
+/** Mobile Nav **/
 .mobile-menu2 {
 	display: none;
 }
@@ -7274,7 +7274,7 @@ body.hc-nav-open {
 	transform: translateY(-100%);
 }
 
-/**update 1.9**/
+/** update 1.9 **/
 .custom-nav .menu-dorpdown {
 	width: 240px;
 	margin: 0 auto;
@@ -7296,7 +7296,7 @@ body.hc-nav-open {
 	right: 0;
 }
 
-/**update 2.0**/ 
+/** update 2.0 **/ 
 .onloadpage {
 	z-index: 999999999;
 }
@@ -7376,7 +7376,7 @@ a.smllbtnn {
 .switch-wrapper  .slider.round:before {
 	border-radius: 50%;
 }
-/****/
+/**  **/
 .digitalagency20 {
 	background: url(../images/shape/bg-glass.jpg);
 	background-repeat: no-repeat;
@@ -7642,7 +7642,7 @@ a.smllbtnn {
 	border-bottom: 4px solid #a2ffe9;
 }
 
-/***float label**/
+/** *float label **/
 .floating-label {
 	position: relative;
 	margin-bottom: 20px;
@@ -7684,7 +7684,7 @@ a.smllbtnn {
 	color: #828282;
 }
 
-/**swiper slider start**/
+/** swiper slider start **/
 .hero-slider {
 	width: 100%;
 	height: 100vh;
@@ -7847,9 +7847,9 @@ a.smllbtnn {
 	margin-right: 10px;
 }
 
-/**swiper slider end**/
+/** swiper slider end **/
 
-/***freelancer v2**/
+/** *freelancer v2 **/
 .freelancerv2 {
 	background-color: #05081a;
 }
@@ -8067,7 +8067,7 @@ html .mt15 {
 	background: linear-gradient(to right, #f92c8b 0%,#b02cd6 100%);
 }
 
-/***mouse cursor**/
+/** *mouse cursor **/
 .mouse-cursor {
 	position: fixed;
 	left: 0;
@@ -8126,7 +8126,7 @@ html .mt15 {
 .cursor-follow.cursor-hover {
 	opacity: 0;
 }
-/****/
+/**  **/
 .nxbg-a {
 	background-color: #f8edff;
 }
@@ -8188,7 +8188,7 @@ html .mt15 {
 .footerdex {
 	background-color: #01011b;
 }
-/***/
+/** */
 #progress-bar {
 	--scrollAmount: 0%;
 	background-image: linear-gradient(to right, #673AB7 0%,#2196F3 100%);
@@ -8199,7 +8199,7 @@ html .mt15 {
 	z-index: 999999999;
 }
 
-/**Start-Bootstrap-v5.1.3-update**/ 
+/** Start-Bootstrap-v5.1.3-update **/ 
 a {
 	text-decoration: auto;
 }
@@ -8331,10 +8331,10 @@ a {
 .col-lg-3-cus, .col-lg-6-cus {
 	padding: 0;
 }
-/**End-Bootstrap-v5.1.3-update**/ 
+/** End-Bootstrap-v5.1.3-update **/ 
 
 
-/**Start-Update 2.1**/
+/** Start-Update 2.1 **/
 .ff-social-icons a:hover {
 	color: #ff1f8e;
 }
@@ -8528,7 +8528,7 @@ a {
 	grid-gap: 40px;
 }
 
-/**about page timeline**/
+/** about page timeline **/
 .timeline {
 	position: relative;
 }
@@ -8745,7 +8745,7 @@ a {
 	}
 }
 
-/**theme setup**/
+/** theme setup **/
 .w80 {
 	width: 80px;
 }
@@ -8777,7 +8777,7 @@ a {
 .h-cb {
 	justify-content: space-between;
 } 
-/**theme setup**/
+/** theme setup **/
 
 .icon-btn {
 	display: inline-flex;
@@ -9340,7 +9340,7 @@ html body .title-hero p {
 	display: flex;
 	align-items: center;
 }
-/**End-Update 2.1**/
+/** End-Update 2.1 **/
 
 /*Update 2.2*/
 .sidebarform input, .sidebarform  select,  .sidebarform  textarea {
@@ -9586,7 +9586,7 @@ label.error {
 	padding: 0 50px;
 }
 
-/***/
+/** */
 .single-blog- img {
 	max-width: 70px;
 }
@@ -10544,11 +10544,11 @@ input {
 }
 
 .media img {
-	width: 40px;
-	height: 40px;
+	width: 50px;
+	height: 50px;
 	display: block;
 	margin: auto;
-	position: absolute;
+	/* position: absolute; */
 	top: 0;
     left: 0;
     right: 0;
@@ -11013,8 +11013,8 @@ h3.common-heading {
 
 .media {
 	position: relative;
-	padding: 0 0 0 20px;
-	margin-left: 20px;
+	/* padding: 0 0 0 20px;
+	margin-left: 20px; */
 }
 
 .testimonial {
@@ -11113,15 +11113,15 @@ ul.list li {
 @keyframes moveXY{
 	0%{
 		transform: translate(-150px,0);
-		-webkit-transform: translate(-150px,0); /** Chrome & Safari **/
-		-o-transform: translate(-150px,0); /** Opera **/
-		-moz-transform: translate(-150px,0); /** Firefox **/
+		-webkit-transform: translate(-150px,0); /**  Chrome & Safari  **/
+		-o-transform: translate(-150px,0); /**  Opera  **/
+		-moz-transform: translate(-150px,0); /**  Firefox  **/
 	}
 	100%{
 		transform: translate(150px,0);
-		-webkit-transform: translate(150px,0); /** Chrome & Safari **/
-		-o-transform: translate(150px,0); /** Opera **/
-		-moz-transform: translate(150px,0); /** Firefox **/
+		-webkit-transform: translate(150px,0); /**  Chrome & Safari  **/
+		-o-transform: translate(150px,0); /**  Opera  **/
+		-moz-transform: translate(150px,0); /**  Firefox  **/
 	}
 
 }
@@ -11135,9 +11135,9 @@ ul.list li {
 
 .object {
     transition: all 5s ease-in-out;
-    -webkit-transition: all 5s ease-in-out; /** Chrome & Safari **/
-    -moz-transition: all 5s ease-in-out; /** Firefox **/
-    -o-transition: all 5s ease-in-out; /** Opera **/
+    -webkit-transition: all 5s ease-in-out; /**  Chrome & Safari  **/
+    -moz-transition: all 5s ease-in-out; /**  Firefox  **/
+    -o-transition: all 5s ease-in-out; /**  Opera  **/
 }
 
 .evil-witch-concept {
