--- a/css/style.css
+++ b/css/style.css
@@ -2402,7 +2402,7 @@ footer.ftshap:before {
 	position: relative;
 	overflow: hidden;
 	background-size: cover;
-	background-position: center center;
+	/* background-position: center center; */
 	background-repeat: no-repeat;
 }
 
