--- a/css/style.css
+++ b/css/style.css
@@ -11437,6 +11437,25 @@ ul.list li {
     padding: 50px 0px;
 }
 
+/* Game Page */
+
+.game-page {
+    background-image: url(../images/banner/game-banner.png);
+    background-size: cover;
+    padding: 50px 0px;
+}
+
+.game-services-body {
+	background: -moz-linear-gradient(top,#904E95 0,#E96443 100%);
+	background: -webkit-linear-gradient(top,#904E95 0,#E96443 100%);
+	background: linear-gradient(to bottom,#904E95 0,#E96443 100%);
+}
+
+.game-service-body {
+	background: -moz-linear-gradient(top,#904E95 0,#E96443 100%);
+	background: -webkit-linear-gradient(top,#904E95 0,#E96443 100%);
+	background: linear-gradient(to bottom,#904E95 0,#E96443 100%);
+}
 
 /*  Evil Witch Case Study  */
 
