--- a/css/style.css
+++ b/css/style.css
@@ -11419,6 +11419,14 @@ h3.common-heading {
 	border-color: #263F4A;
 }
 
+/* Website Page */
+
+.website-page {
+    background-image: url(../images/banner/website-banner.png);
+    background-size: cover;
+    padding: 50px 0px;
+}
+
 /* Game Development Service */
 
 .boxes {
@@ -11741,6 +11749,58 @@ ul.service_box li h5 {
     width: 125px;
 }
 
+.game-page {
+    background-image: url(../images/banner/game-banner.png);
+    background-size: cover;
+    padding: 50px 0px;
+}
+
+.game-services-body:hover {
+	background: -moz-linear-gradient(top,#904E95 0,#E96443 100%);
+	background: -webkit-linear-gradient(top,#904E95 0,#E96443 100%);
+	background: linear-gradient(to bottom,#904E95 0,#E96443 100%);
+}
+
+.game-services-body:hover h4, .game-services-body:hover p {
+	color: #fff;
+}
+
+.custom-app-service {
+	background: url(../images/services/games-banner.png) no-repeat;
+    background-size: cover;
+    background-position: center;
+    height: 1080px;
+}
+
+.ar-game {
+	background-image: url(../images/services/wall-01.png);
+    background-size: cover;
+    padding: 50px 0px;
+}
+
+.vr-game {
+	background-image: url(../images/services/wall-01.png);
+    background-size: cover;
+    padding: 50px 0px;
+}
+
+.mr-game {
+	background-image: url(../images/services/wall-01.png);
+    background-size: cover;
+    padding: 50px 0px;
+}
+
+.process-section {
+    background: url(../images/services/game-benefits.png) no-repeat;
+    background-size: cover;
+}
+
+.game-service-body {
+	background: -moz-linear-gradient(top,#904E95 0,#E96443 100%);
+	background: -webkit-linear-gradient(top,#904E95 0,#E96443 100%);
+	background: linear-gradient(to bottom,#904E95 0,#E96443 100%);
+}
+
 /*   */
 
 .contact-main {
@@ -11850,34 +11910,6 @@ ul.list {
 
 ul.list li {
 	padding: 15px;
-}
-
-/* Website Page */
-
-.website-page {
-    background-image: url(../images/banner/website-banner.png);
-    background-size: cover;
-    padding: 50px 0px;
-}
-
-/* Game Page */
-
-.game-page {
-    background-image: url(../images/banner/game-banner.png);
-    background-size: cover;
-    padding: 50px 0px;
-}
-
-.game-services-body {
-	background: -moz-linear-gradient(top,#904E95 0,#E96443 100%);
-	background: -webkit-linear-gradient(top,#904E95 0,#E96443 100%);
-	background: linear-gradient(to bottom,#904E95 0,#E96443 100%);
-}
-
-.game-service-body {
-	background: -moz-linear-gradient(top,#904E95 0,#E96443 100%);
-	background: -webkit-linear-gradient(top,#904E95 0,#E96443 100%);
-	background: linear-gradient(to bottom,#904E95 0,#E96443 100%);
 }
 
 /*  Evil Witch Case Study  */
