--- a/css/style.css
+++ b/css/style.css
@@ -11687,8 +11687,8 @@ h3.common-heading {
     /* background: #fff; */
     color: #999999;
     display: block;
-    width: 70px;
-    height: 70px;
+    width: 90px;
+    height: 90px;
     -webkit-background-clip: padding-box;
     -moz-background-clip: padding-box;
     background-clip: padding-box;
@@ -11811,6 +11811,17 @@ ul.service_box li h5 {
 
 .game-apps .card-body {
 	text-align: center;
+}
+
+.custom-game-app {
+	background: -moz-linear-gradient(top,#904E95 0,#E96443 100%);
+	background: -webkit-linear-gradient(top,#904E95 0,#E96443 100%);
+	background: linear-gradient(to bottom,#904E95 0,#E96443 100%);
+}
+
+.why-choose-img {
+    width: 90px;
+    transform: rotate(-45deg);
 }
 
 /*   */
