--- a/css/responsive.css
+++ b/css/responsive.css
@@ -1939,14 +1939,17 @@
     .hero-heading-sec2 h3 {
         font-size: 30px;
         line-height: 40px;
+        text-align: center;
     }
 
-    .hero-heading-sec2 > p1 {
-        margin: 40px 0 20px;
+    .hero-heading-sec2 .p1 {
+        margin: 60px 0 20px;
+        text-align: center;
     }
 
-    .hero-heading-sec2 > p2 {
+    .hero-heading-sec2 .p2 {
         margin: 20px 0;
+        text-align: center;
     }
 
     .about h2, .type h2, .services h2, .app h2, .tech h2, .our-work h2, .case-studies h2, .custom-app h2, .ideal h2,
@@ -2086,6 +2089,25 @@
     .deliver h3 {
         text-align: center;
         padding-bottom: 10px;
+    }
+
+    /* Mobile App */
+
+    .case-study-icon-img {
+        margin: 0 auto;
+    }
+
+    .case-study-text {
+        text-align: center;
+    }
+
+    .case-study-link {
+        margin: 0 auto;
+        display: block;
+    }
+
+    .custom-app-text {
+        text-align: center;
     }
 
     /* Placea Case Study */
@@ -3038,6 +3060,21 @@
         height: 1140px !important;
     }
 
+    /* Mobile App */
+
+    .app-hero-bnr {
+        margin-top: 70px;
+    }
+
+    .case-study-heading {
+        text-align: left !important;
+    }
+
+    .case-study-link {
+        margin: 0 auto;
+        display: block;
+    }
+
     /* Placea Case Study */
 
     .placea-banner-img {
@@ -3880,7 +3917,7 @@
     }
 
     .custom-app-dev {
-        height: 190px;
+        height: 250px;
     }
 
     .type .card {
@@ -4033,6 +4070,12 @@
 
     .web-service {
         height: 1140px !important;
+    }
+
+    /* Mobile App */
+
+    .case-study-heading {
+        text-align: left !important;
     }
 
     /* Placea Case Study */
@@ -4783,7 +4826,7 @@
     }
 
     .custom-app-dev {
-        height: 160px;
+        height: 190px;
     }
 
     .type .card {
@@ -4830,18 +4873,8 @@
         height: 235px;
     }
 
-    .ideal h2 {
-        padding-bottom: 10px;
-    }
-
     .ideal p {
         text-align: left;
-        padding-bottom: 10px;
-    }
-
-    .ideal a {
-        text-align: center;
-        padding-bottom: 20px;
     }
 
     .tab-content {
@@ -4857,7 +4890,7 @@
     }
 
     .key-desc {
-        text-align: center;
+        text-align: left;
     }
 
     .numbersOfSatisfy {
@@ -4927,6 +4960,16 @@
 
     .web-service {
         height: 1140px !important;
+    }
+
+    /* Mobile App */
+
+    .case-study-heading {
+        text-align: left !important;
+    }
+
+    .mobile-app-service {
+        height: 800px !important;
     }
 
     /* Placea Case Study */
@@ -5664,7 +5707,7 @@
     }
 
     .custom-app-dev {
-        height: 160px;
+        height: 190px;
     }
 
     .type .card {
@@ -5738,7 +5781,7 @@
     }
 
     .key-desc {
-        text-align: center;
+        text-align: left;
     }
 
     .numbersOfSatisfy {
@@ -5808,6 +5851,14 @@
 
     .web-service {
         height: 1140px !important;
+    }
+
+    .mobile-app-service {
+        height: 800px !important;
+    }
+
+    .case-study-heading {
+        text-align: left !important;
     }
 
     /* Placea Case Study */
@@ -6625,8 +6676,12 @@
 
     .type h2, .services h2, .process h2, .techonology-used h2, .global-market h2,
     .deliver h2, .badges-section h2, .faq-section h2, .reviews-block h2,
-    .brand-logo-slider h2, .deliveries-section h2 {
+    .brand-logo-slider h2, .deliveries-section h2, .case-studies h2 {
         text-align: center;
+    }
+
+    h2.heading3 {
+        text-align: left;
     }
 
     .about h2, .custom-app h2, .ideal h2, .tech h2, .our-work h2, .app h2 {
@@ -6708,7 +6763,7 @@
     }
 
     .key-desc {
-        text-align: center;
+        text-align: left;
     }
 
     .numbersOfSatisfy {
